start keras server prediction api

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ presentation/proposal
 # ignore todo list
 docs/todo.txt
 
+# ignore word embeddings
+# use glove.840B.300d.txt
+code/website/app/word_embedding
